src/objects/Sirono_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Apikey__c</fullName>
        <defaultValue>&quot;ac9b158e21153af4959ed5621d3c364c&quot;</defaultValue>
        <label>Apikey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <defaultValue>&quot;US&quot;</defaultValue>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Format</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Number_Plan_Installments__c</fullName>
        <defaultValue>24</defaultValue>
        <label>Max Number Plan Installments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Installment_Amount__c</fullName>
        <defaultValue>25.00</defaultValue>
        <label>Min Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Number_Plan_Installments__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Min Number Plan Installments</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Server_Endpoint_URL__c</fullName>
        <defaultValue>&quot;https://demo.stage.sirono.com&quot;</defaultValue>
        <description>Server endpoint for Sirono application.</description>
        <label>Server Endpoint URL</label>
        <type>Url</type>
    </fields>
    <label>Sirono Settings New</label>
</CustomObject>